[package]
name = "kinza_assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}

rustls = {version = "0.22.2"}
webpki-roots = "0.26"
tokio-tungstenite = {version = "0.21.0", features = ["native-tls", "__rustls-tls"]}

futures = "0.3.30"
chrono = "0.4.31"
tungstenite = "0.21.0"
tokio = {version = "1.35.1", features = ["full"]}